--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@remix-run/server-runtime": "^1.4.3",
     "bcryptjs": "^2.4.3",
     "react": "^17.0.2",
+    "react-card-flip": "^1.1.5",
     "react-dom": "^17.0.2",
     "tiny-invariant": "^1.2.0"
   },
