--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react": "^17.0.2",
     "react-card-flip": "^1.1.5",
     "react-dom": "^17.0.2",
+    "react-toastify": "^9.0.1",
     "tiny-invariant": "^1.2.0"
   },
   "devDependencies": {
